--- a/feindex/templates/default/site_base.html
+++ b/feindex/templates/default/site_base.html
@@ -20,8 +20,9 @@
 {{ feincms_page.content.media }}
 {{ feincms_page.object.media }}
 </head>
-            
+
 <body lang="{{ LANGUAGE_CODE }}">
+  <!-- header start -->
   <header class="navbar navbar-fixed-top">
     <div class="navbar-inner">
       <div class="container-fluid">
@@ -42,72 +43,80 @@
           </ul>
           <p class="navbar-text pull-right">Logged in as <a href="#">username</a></p>
         </div>
-            </div>
-            </div>
-            </header>
-            
-            <!-- content start -->
-            <div class="main">
-            <div class="content">{% block content %}{% endblock content %}</div>
-            </div>
-            <!-- content end -->
-            
-            <!-- foot start -->
-            <footer id="foot">
-            <div class="footer">
-            <div class="container">{% block foot %}{% endblock %}</div>
-            <div class="bottom">
-            <div class="copyright">
-            <div class="two-even">
+      </div>
+    </div>
+  </header>
+  <!-- header end -->
+
+  <!-- content start -->
+  <div class="main">
+    <div class="content">{% block content %}{% endblock content %}</div>
+  </div>
+  <!-- content end -->
+
+  <!-- foot start -->
+  <footer id="foot">
+    <div class="footer">
+      <div class="container">{% block foot %}{% endblock %}</div>
+      <div class="bottom">
+        <div class="copyright">
+          <div class="two-even">
             <p>© Copyright 2011.  <a href="mailto:indexofire@hotmail.com">Mark Renron</a> from <a href="http://www.hzcdc.net/" target="_self">HZCDC</a>. All Rights Reserved!</p>
             <p>Site built on <a href="http://www.feinheit.ch">Feincms</a> based on <a href="http://www.djangoproject.com">Django</a></p>
-            </div>
-            </div>
-            </div>
-            </div>
-            </footer>
-            <!-- foot end -->
-            <script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap-dropdown.js"></script>
-            <!--
-            <script src="{{ STATIC_URL }}libs/cufon/cufon-yui.min.js"></script>
-            <script src="{{ THEME_URL }}js/cufon-font/cufon-font.js"></script>
-            <script>Cufon.replace("#hzcdc");</script>
-            -->
-            <style>
-            #hzcdc {
-            font-family: 'Lemon', cursive;
-            }
-            .special {
-            color: #D43;
-            }
-            </style>
-            <!-- load less -->
-            <link rel="stylesheet/less" href="{{ THEME_URL }}less/index.less"/>
-            <script src="{{ STATIC_URL }}libs/less/less-1.2.1.min.js"></script>
-            <script src="{{ THEME_URL }}js/bootstrap/bootstrap-transition.js"></script>
-            <script src="{{ THEME_URL }}js/bootstrap/bootstrap-alert.js"></script>
-            <script src="{{ THEME_URL }}js/bootstrap/bootstrap-modal.js"></script>
-            <!--<script src="{{ THEME_URL }}js/bootstrap/bootstrap-dropdown.js"></script>-->
-            <script src="{{ THEME_URL }}js/bootstrap/bootstrap-scrollspy.js"></script>
-            <script src="{{ THEME_URL }}js/bootstrap/bootstrap-tab.js"></script>
-            <script src="{{ THEME_URL }}js/bootstrap/bootstrap-tooltip.js"></script>
-            <script src="{{ THEME_URL }}js/bootstrap/bootstrap-popover.js"></script>
-            <script src="{{ THEME_URL }}js/bootstrap/bootstrap-button.js"></script>
-            <script src="{{ THEME_URL }}js/bootstrap/bootstrap-collapse.js"></script>
-            <script src="{{ THEME_URL }}js/bootstrap/bootstrap-carousel.js"></script>
-            <script src="{{ THEME_URL }}js/bootstrap/bootstrap-typeahead.js"></script>
-            
-            </body>
-            {% if GOOGLE_ANALYTICS %}
-            <script type="text/javascript">
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', '{{ GOOGLE_ANALYTICS }}']);
-            _gaq.push(['_trackPageview']);
-            (function() {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-            })();
-            </script>
-            {% endif %}
-            </html>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- foot end -->
+
+<script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap-dropdown.js"></script>
+<!--
+<script src="{{ STATIC_URL }}libs/cufon/cufon-yui.min.js"></script>
+<script src="{{ THEME_URL }}js/cufon-font/cufon-font.js"></script>
+<script>Cufon.replace("#hzcdc");</script>
+-->
+
+<style>
+#hzcdc {
+    font-family: 'Lemon', cursive;
+}
+.special {
+    color: #D43;
+}
+</style>
+
+{% if debug %}
+<!-- load less -->
+<link rel="stylesheet/less" href="{{ THEME_URL }}less/index.less"/>
+<script src="{{ STATIC_URL }}libs/less/less-1.2.1.min.js"></script>
+<script src="{{ THEME_URL }}js/bootstrap/bootstrap-transition.js"></script>
+<script src="{{ THEME_URL }}js/bootstrap/bootstrap-alert.js"></script>
+<script src="{{ THEME_URL }}js/bootstrap/bootstrap-modal.js"></script>
+<!--<script src="{{ THEME_URL }}js/bootstrap/bootstrap-dropdown.js"></script>-->
+<script src="{{ THEME_URL }}js/bootstrap/bootstrap-scrollspy.js"></script>
+<script src="{{ THEME_URL }}js/bootstrap/bootstrap-tab.js"></script>
+<script src="{{ THEME_URL }}js/bootstrap/bootstrap-tooltip.js"></script>
+<script src="{{ THEME_URL }}js/bootstrap/bootstrap-popover.js"></script>
+<script src="{{ THEME_URL }}js/bootstrap/bootstrap-button.js"></script>
+<script src="{{ THEME_URL }}js/bootstrap/bootstrap-collapse.js"></script>
+<script src="{{ THEME_URL }}js/bootstrap/bootstrap-carousel.js"></script>
+<script src="{{ THEME_URL }}js/bootstrap/bootstrap-typeahead.js"></script>
+{% else %}
+<link rel="stylesheet/css" href="{{ THEME_URL }}css/style.css"/>
+{% endif %}
+
+</body>
+{% if GOOGLE_ANALYTICS %}
+<script type="text/javascript">
+var _gaq = _gaq || [];
+_gaq.push(['_setAccount', '{{ GOOGLE_ANALYTICS }}']);
+_gaq.push(['_trackPageview']);
+(function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
+</script>
+{% endif %}
+</html>
