--- a/feindex/templates/default/site_base.html
+++ b/feindex/templates/default/site_base.html
@@ -8,15 +8,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 {% endblock meta %}
-  <title>{% block title %}{{ feincms_page.title }}{% get_fragment request "title" %}{% endblock title %}</title>
+  <title>{% block title %}{{ feincms_page.title }}{% endblock title %}</title>
   <link rel="shortcut icon" href="{{ THEME_URL }}img/favicon.ico"/>
   <link href="http://fonts.googleapis.com/css?family=Lemon" rel="stylesheet" type="text/css"/>
   <!--[if lt IE 9]><script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
   <script type="text/javascript" src="{% if debug %}{{ STATIC_URL }}libs/jquery/jquery-1.7.1.min.js{% else %}https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js{% endif %}"></script>
-{% block extra_head %}
-  {% get_fragment request "extra_head" %}
-{% endblock extra_head %}
-
+{% block extra_head %}{% endblock extra_head %}
 {{ feincms_page.content.media }}
 {{ feincms_page.object.media }}
 </head>
@@ -47,6 +44,8 @@
     </div>
   </header>
   <!-- header end -->
+
+<div style="margin-top: 60px">{% feincms_breadcrumbs feincms_page %}</div>
 
   <!-- content start -->
   <div class="main">
@@ -88,20 +87,20 @@
 
 {% if debug %}
 <!-- load less -->
-<link rel="stylesheet/less" href="{{ THEME_URL }}less/index.less"/>
+<link rel="stylesheet/less" href="{{ STATIC_URL }}default/less/index.less"/>
 <script src="{{ STATIC_URL }}libs/less/less-1.2.1.min.js"></script>
-<script src="{{ THEME_URL }}js/bootstrap/bootstrap-transition.js"></script>
-<script src="{{ THEME_URL }}js/bootstrap/bootstrap-alert.js"></script>
-<script src="{{ THEME_URL }}js/bootstrap/bootstrap-modal.js"></script>
-<!--<script src="{{ THEME_URL }}js/bootstrap/bootstrap-dropdown.js"></script>-->
-<script src="{{ THEME_URL }}js/bootstrap/bootstrap-scrollspy.js"></script>
-<script src="{{ THEME_URL }}js/bootstrap/bootstrap-tab.js"></script>
-<script src="{{ THEME_URL }}js/bootstrap/bootstrap-tooltip.js"></script>
-<script src="{{ THEME_URL }}js/bootstrap/bootstrap-popover.js"></script>
-<script src="{{ THEME_URL }}js/bootstrap/bootstrap-button.js"></script>
-<script src="{{ THEME_URL }}js/bootstrap/bootstrap-collapse.js"></script>
-<script src="{{ THEME_URL }}js/bootstrap/bootstrap-carousel.js"></script>
-<script src="{{ THEME_URL }}js/bootstrap/bootstrap-typeahead.js"></script>
+<script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap-transition.js"></script>
+<script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap-alert.js"></script>
+<script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap-modal.js"></script>
+<script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap-dropdown.js"></script>-->
+<script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap-scrollspy.js"></script>
+<script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap-tab.js"></script>
+<script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap-tooltip.js"></script>
+<script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap-popover.js"></script>
+<script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap-button.js"></script>
+<script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap-collapse.js"></script>
+<script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap-carousel.js"></script>
+<script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap-typeahead.js"></script>
 {% else %}
 <link rel="stylesheet/css" href="{{ THEME_URL }}css/style.css"/>
 {% endif %}
