--- a/feindex/assets/default/less/tables.less
+++ b/feindex/assets/default/less/tables.less
@@ -64,13 +64,12 @@ table {
 
 .table-bordered {
   border: 1px solid #ddd;
+  border-left: 0;
   border-collapse: separate; // Done so we can round those corners!
   *border-collapse: collapsed; // IE7 can't round corners anyway
   .border-radius(4px);
-  th + th,
-  td + td,
-  th + td,
-  td + th {
+  th,
+  td {
     border-left: 1px solid #ddd;
   }
   // Prevent a double border
@@ -78,6 +77,7 @@ table {
   tbody:first-child tr:first-child th,
   tbody:first-child tr:first-child td {
     border-top: 0;
+    border-bottom: 1px solid #ddd;
   }
   // For first th or td in the first row in the first thead or tbody
   thead:first-child tr:first-child th:first-child,
@@ -129,11 +129,6 @@ table {
 // -----------------
 
 // Change the columns
-.tableColumns(@columnSpan: 1) {
-  float: none;
-  width: ((@gridColumnWidth) * @columnSpan) + (@gridGutterWidth * (@columnSpan - 1)) - 16;
-  margin-left: 0;
-}
 table {
   .span1     { .tableColumns(1); }
   .span2     { .tableColumns(2); }
@@ -147,4 +142,16 @@ table {
   .span10    { .tableColumns(10); }
   .span11    { .tableColumns(11); }
   .span12    { .tableColumns(12); }
+  .span13    { .tableColumns(13); }
+  .span14    { .tableColumns(14); }
+  .span15    { .tableColumns(15); }
+  .span16    { .tableColumns(16); }
+  .span17    { .tableColumns(17); }
+  .span18    { .tableColumns(18); }
+  .span19    { .tableColumns(19); }
+  .span20    { .tableColumns(20); }
+  .span21    { .tableColumns(21); }
+  .span22    { .tableColumns(22); }
+  .span23    { .tableColumns(23); }
+  .span24    { .tableColumns(24); }
 }
