--- a/feindex/assets/default/less/code.less
+++ b/feindex/assets/default/less/code.less
@@ -14,7 +14,7 @@ pre {
 
 // Inline code
 code {
-  padding: 3px 4px;
+  padding: 2px 4px;
   color: #d14;
   background-color: #f7f7f9;
   border: 1px solid #e1e1e8;
@@ -34,6 +34,7 @@ pre {
   white-space: pre;
   white-space: pre-wrap;
   word-break: break-all;
+  word-wrap: break-word;
 
   // Make prettyprint styles more spaced out for readability
   &.prettyprint {
