--- a/feindex/assets/default/less/custom.less
+++ b/feindex/assets/default/less/custom.less
@@ -8,7 +8,6 @@ body {
   background-image: url('@{img-url}/bg.png') !important;
 }
 .main {
-  padding-top: 60px;
   min-height: 800px;
 }
 a {
@@ -42,6 +41,32 @@ a {
     list-style: none;
   }
 }
+
+// BREADCRUMB
+// ----------
+.breadcrumbs {
+  padding: 7px 14px;
+  margin: 0 0 @baseLineHeight;
+  #gradient > .vertical(@white, #f5f5f5);
+  border: 1px solid #ddd;
+  .border-radius(3px);
+  .box-shadow(inset 0 1px 0 @white);
+  li {
+    display: inline-block;
+    text-shadow: 0 1px 0 @white;
+  }
+  .divider {
+    padding: 0 5px;
+    color: @grayLight;
+  }
+  .active a {
+    color: @grayDark;
+  }
+}
+
+
+
+
 
 // FOOT
 // ----
