--- a/feindex/templates/default/site_base.html
+++ b/feindex/templates/default/site_base.html
@@ -1,7 +1,7 @@
 {% block doctype %}<!DOCTYPE html>{% endblock doctype %}
 {% load i18n applicationcontent_tags feincms_tags feincms_page_tags %}
 <!--[if lt IE 9]><html class="ie"><![endif]-->
-<!--[if gte IE 9]><!--><html><!--<![endif]-->
+<!--[if gte IE 9]><!--><html lang="{{ LANGUAGE_CODE }}"><!--<![endif]-->
 <head>
 {% block meta %}
   <meta charset="utf-8"/>
@@ -18,11 +18,12 @@
 {{ feincms_page.object.media }}
 </head>
 
-<body lang="{{ LANGUAGE_CODE }}">
-  <!-- header start -->
-  <header class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-      <div class="container-fluid">
+<body>
+
+<!-- header start -->
+<header class="navbar navbar-fixed-top">
+  <div class="navbar-inner">
+    <div class="container-fluid">
         <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
           <span class="i-bar"></span>
           <span class="i-bar"></span>
@@ -45,7 +46,9 @@
   </header>
   <!-- header end -->
 
-<div style="margin-top: 60px">{% feincms_breadcrumbs feincms_page %}</div>
+<div class="container" style="margin-top: 60px">
+  {% feincms_breadcrumbs feincms_page %}
+</div>
 
   <!-- content start -->
   <div class="main">
@@ -102,7 +105,7 @@
 <script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap-carousel.js"></script>
 <script src="{{ STATIC_URL }}libs/bootstrap/js/bootstrap-typeahead.js"></script>
 {% else %}
-<link rel="stylesheet/css" href="{{ THEME_URL }}css/style.css"/>
+<link rel="stylesheet/css" href="{{ STATIC_URL }}css/style.css"/>
 {% endif %}
 
 </body>
