--- a/feindex/assets/default/less/custom.less
+++ b/feindex/assets/default/less/custom.less
@@ -32,8 +32,7 @@ a {
   -moz-box-shadow: 0px 0px 5px 1px rgba(100,100,100,0.1);
   box-shadow: 0px 0px 5px 1px rgba(100,100,100,0.1);
   border: 1px solid #E3E3E3;
-  margin-bottom: 20px;
-  margin-top: 30px;
+  margin: 0 0 @baseLineHeight;
 }
 
 #forum-app {
@@ -46,11 +45,7 @@ a {
 // ----------
 .breadcrumbs {
   padding: 7px 14px;
-  margin: 0 0 @baseLineHeight;
-  #gradient > .vertical(@white, #f5f5f5);
-  border: 1px solid #ddd;
-  .border-radius(3px);
-  .box-shadow(inset 0 1px 0 @white);
+  margin: 0;
   li {
     display: inline-block;
     text-shadow: 0 1px 0 @white;
