--- a/feindex/templates/default/site_index.html
+++ b/feindex/templates/default/site_index.html
@@ -36,21 +36,21 @@ $(window).load(function() {
 <div class="row">
   <div class="span4">
     <div class="pad">
-      <img src="{{ STATIC_URL }}img/front_2.jpg" style="padding:5px; margin-bottom:10px;" alt=""/>
+      <img src="{{ STATIC_URL }}img/front_2.jpg" style="padding:5px; margin-bottom:10px;" alt="" width="288px" height="150px"/>
       <h2 style="padding: 0px 10px;">We Communicate</h2>
       <p style="padding: 0px 10px; line-height:16px;font-size:12px;color:#6C6C6C">大建设、大融合、大比武是近年来杭州市市医疗卫生工作的基本方略，“区县强，全市强”更是全市疾控战线的创新意识，只有“城乡一体化发展”才能带来全市疾控的崭新局面。进一步加强协作与交流能更快更好的完成应急检测任务，提高检测水平，丰富视野，提升实践经验。推广先进的检测、检验方法。</p>
     </div>
   </div>
   <div class="span4">
     <div class="pad">
-      <img src="{{ STATIC_URL }}img/front_3.jpg" style="padding:5px; margin-bottom:10px;" alt=""/>
+      <img src="{{ STATIC_URL }}img/front_3.jpg" style="padding:5px; margin-bottom:10px;" alt="" width="288px" height="150px"/>
       <h2 style="padding: 0px 10px;">We Detect</h2>
       <p style="padding: 0px 10px; line-height:16px;font-size:12px;color:#6C6C6C">参与和指导地方处理重大疫情、突发公共卫生事件，建立杭州重大疾病、中毒、卫生污染、救灾防病等重大公共卫生问题的应急反应能力 ，配合并参与各组织对重大突发公共卫生事件的调查处理，需要实验室能够做对突发公共卫生事件实验室的应急诊断技术的研究、开发与应用。</p>
     </div>
   </div>
   <div class="span4">
     <div class="pad">
-      <img src="{{ STATIC_URL }}img/front_4.jpg" style="padding:5px; margin-bottom:10px;" alt=""/>
+      <img src="{{ STATIC_URL }}img/front_4.jpg" style="padding:5px; margin-bottom:10px;" alt="" width="288px" height="150px"/>
         <h2 style="padding: 0px 10px;">We Compute</h2>
         <p style="padding: 0px 10px; line-height:16px;font-size:12px;color:#6C6C6C">了解大自然无声而优雅的生命语言，是现代分子生物学的追求。海量分子数据和其神秘的和微妙的模式导致计算机化的数据库和分析工具的要求。寻找新的方法来处理大量复杂的数据，并提供给研究人员更便捷的分析和计算工具，来推进我们对病原在疾病中的作用的认识。</p>
     </div>
