--- a/feindex/apps/message/templates/message/view.html
+++ b/feindex/apps/message/templates/message/view.html
@@ -1,4 +1,4 @@
-{% extends "postman/base.html" %}
+{% extends "message/base.html" %}
 {% load i18n %}{% load postman_tags %}
 {% block content %}
 <div id="postman">
