--- a/feindex/apps/message/templates/message/message_base.html
+++ b/feindex/apps/message/templates/message/message_base.html
@@ -1,17 +1,94 @@
-{% extends "site_base.html" %}
-{% load i18n postman_tags %}
+{% load i18n postman_tags pagination_tags applicationcontent_tags %}
 
 {% block title %}{% trans "Messaging" %}{% endblock %}
 
-{% block postman_menu %}
-<ul id="postman_menu">{% postman_unread as unread_count %}
- <li><a href="{% url postman_inbox %} ">&raquo;&nbsp;{% trans "Inbox" %}{% if unread_count %} <strong>({{ unread_count }})</strong>{% endif %}</a></li>
- <li><a href="{% url postman_sent %} ">&raquo;&nbsp;{% trans "Sent Messages" %}</a></li>
- <li><a href="{% url postman_write %} ">&raquo;&nbsp;{% trans "Write" %}</a></li>
- <li><a href="{% url postman_archives %} ">&raquo;&nbsp;{% trans "Archives" %}</a></li>
- <li><a href="{% url postman_trash %} ">&raquo;&nbsp;{% trans "Trash" %}</a></li>
-</ul>
-{% endblock %}
+{% fragment request "extra_head" %}
+  {% block extra_head %}
+  <link rel="stylesheet" type="text/css" media="screen" href="{{ STATIC_URL }}message/css/message.css" />
+  {% endblock %}
+{% endfragment %}
 
-{% block message %}
-{% endblock message %}
+<ul id="postman_menu">{% postman_unread as unread_count %}
+ <li><a href="{% app_reverse 'message-inbox' 'message.urls' %} ">&raquo;&nbsp;{% trans "Inbox" %}{% if unread_count %} <strong>({{ unread_count }})</strong>{% endif %}</a></li>
+ <li><a href="{% app_reverse 'postman_sent' 'message.urls' %} ">&raquo;&nbsp;{% trans "Sent Messages" %}</a></li>
+ <li><a href="{% app_reverse 'postman_write' 'message.urls' %} ">&raquo;&nbsp;{% trans "Write" %}</a></li>
+ <li><a href="{% app_reverse 'postman_archives' 'message.urls' %} ">&raquo;&nbsp;{% trans "Archives" %}</a></li>
+ <li><a href="{% app_reverse 'postman_trash' 'message.urls' %} ">&raquo;&nbsp;{% trans "Trash" %}</a></li>
+</ul>
+
+
+
+<div id="postman">
+<h1>{% block pm_folder_title %}{% endblock %}</h1>
+{% if pm_messages %}
+  {% autopaginate pm_messages %}
+  {% if invalid_page %}
+  <p>{% trans "Sorry, this page number is invalid." %}</p>
+  {% else %}
+  {% block pm_by_modes %}
+  <div id="pm_by_modes">
+    <span class="pm_by_mode">{% if by_message %}<a href="{{ by_conversation_url }}">{% endif %}{% trans "by conversation" %}{% if by_message %}</a>{% endif %}</span>
+    <span class="pm_by_mode">{% if by_conversation %}<a href="{{ by_message_url }}">{% endif %}{% trans "by message" %}{% if by_conversation %}</a>{% endif %}</span>
+  </div>
+  {% endblock pm_by_modes %}
+
+  <form action="{% block pm_form_action %}{% endblock %}" method="post">{% csrf_token %}
+  {% block pm_form_buttons %}
+  <span id="pm_buttons">
+    {% block pm_delete_button %}
+    <button type="submit" onclick="this.form.action='{% app_reverse 'postman_delete' 'message.urls' %}'">{% trans "Delete" %}</button>
+    {% endblock %}
+    {% block pm_archive_button %}
+    <button type="submit" onclick="this.form.action='{% app_reverse 'postman_archive' 'message.urls' %}'">{% trans "Archive" %}</button>
+    {% endblock %}
+    {% block pm_undelete_button %}
+    <button type="submit" onclick="this.form.action='{% app_reverse 'postman_undelete' 'message.urls' %}'">{% trans "Undelete" %}</button>
+    {% endblock %}
+  </span>
+  {% endblock %}
+
+  <table id="pm_messages">
+    <thead>
+      <tr>
+        <th>{% trans "Action" %}</th>
+        {% block pm_sender_header %}
+        <th><a href="{% postman_order_by sender %}">{% trans "Sender" %}</a></th>
+        {% endblock %}
+        {% block pm_recipient_header %}
+        <th><a href="{% postman_order_by recipient %}">{% trans "Recipient" %}</a></th>
+        {% endblock %}
+        <th><a href="{% postman_order_by subject %}">{% trans "Subject" %}</a></th>
+        <th><a href="{% postman_order_by date %}">{% block pm_date %}{% trans "Date" %}{% endblock %}</a></th>
+      </tr>
+    </thead>
+    <tbody>
+    {% for message in pm_messages %}
+      <tr>
+        <td><input type="checkbox" {% if by_conversation and message.thread_id %}name="tpks" value="{{ message.thread_id }}"{% else %}name="pks" value="{{ message.pk }}"{% endif %} /></td>
+        {% block pm_sender_cell %}
+        <td>{{ message.obfuscated_sender|or_me:user }}{% if message.count %} ({{ message.count }}){% endif %}</td>
+        {% endblock %}
+        {% block pm_recipient_cell %}
+        <td>{{ message.obfuscated_recipient|or_me:user }}{% if message.count %} ({{ message.count }}){% endif %}</td>
+        {% endblock %}
+        <td>{% if message.is_new %}<strong>{% endif %}{% if message.is_replied %}<em>{% endif %}
+          {% block pm_subject %}
+          <a href="{% if by_conversation and message.thread_id %}{% app_reverse 'postman_view_conversation' 'message.urls' message.thread_id %}{% else %}{{message.get_absolute_url }}{% endif %}?next={{ current_url|urlencode }}">{% include "message/inc_subject_ex.html" %}</a>
+          {% endblock %}
+          {% if message.is_replied %}</em>{% endif %}{% if message.is_new %}</strong>{% endif %}</td>
+        <td>{{ message.sent_at|compact_date:_("g:i A,M j,n/j/y") }}</td>
+      </tr>{% endfor %}
+    </tbody>
+  </table>
+  </form>
+
+  {% paginate %}
+  {% endif %}
+
+{% else %}
+<p>{% trans "No messages." %}</p>
+{% endif %}
+
+{% block pm_footer_info %}{% endblock %}
+</div>
+
