--- a/feindex/apps/message/templates/message/sent.html
+++ b/feindex/apps/message/templates/message/sent.html
@@ -1,4 +1,4 @@
-{% extends "postman/base_folder.html" %}
+{% extends "message/message_base_folder.html" %}
 {% load i18n %}
 {% block pm_folder_title %}{% trans "Sent Messages" %}{% endblock %}
 {% block pm_undelete_button %}{% endblock %}
