--- a/feindex/apps/message/templates/message/write.html
+++ b/feindex/apps/message/templates/message/write.html
@@ -1,3 +1,3 @@
-{% extends "postman/base_write.html" %}
+{% extends "message/base_write.html" %}
 {% load i18n %}
 {% block pm_write_title %}{% trans "Write"%}{% endblock %}
