--- a/feindex/apps/message/templates/message/message_archives.html
+++ b/feindex/apps/message/templates/message/message_archives.html
@@ -1,4 +1,4 @@
-{% extends "postman/base_folder.html" %}
+{% extends "message/message_base.html" %}
 {% load i18n %}
 {% block pm_folder_title %}{% trans "Archived Messages" %}{% endblock %}
 {% block pm_archive_button %}{% endblock %}
