--- a/feindex/apps/message/templates/message/message_inbox.html
+++ b/feindex/apps/message/templates/message/message_inbox.html
@@ -1,6 +1,5 @@
 {% extends "message/message_base.html" %}
-
-{% load i18n %}
+{% load i18n applicationcontent_tags %}
 
 {% block pm_folder_title %}{% trans "Received Messages" %}{% endblock %}
 {% block pm_undelete_button %}{% endblock %}
